# apertium-lex-tools

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  BiltransWithoutQueue.cpp  BiltransWithoutQueue.h  Makefile  Makefile.am  Multitrans.cpp  Multitrans.h  README  README.yasmet  README_mac  TODO  TaggerOutputProcessor.cpp  TaggerOutputProcessor.h  apertium-lex-freq.py  apertium-lex-rules.py  apertium-lex-tools.pc.in  apertium-no-en.no-en.lrx  apertium-no-en.no-en2.lrx  apertium_ldx_proc.cc  apertium_lex_defaults.cc  apertium_lex_rule_comp.cc  apertium_lex_rule_proc.cc  autogen.sh  bkp.lrx_processor.cc  compile.sh  configure.ac  configure~  irstlm_ranker.cpp  irstlm_ranker.h  ldx_proc.cc  lrx.rng  lrx_comp.cc  lrx_compiler.cc  lrx_compiler.h  lrx_proc.cc  lrx_processor.cc  lrx_processor.h  (+7 more)
.github/workflows/: build.yaml
archive/: README  apertium-lex-freq.py  apertium-lex-rules.py  apertium-train-lex-freq.py  apertium_lex_rule_comp.cc  apertium_lex_rule_proc.cc
corpora/br-fr/: oab.dev.br  oab.dev.br-fr.ref  oab.dev.br-fr.src  oab.dev.fr  oab.tst.br  oab.tst.br-fr.ref  oab.tst.br-fr.src  oab.tst.fr
corpora/en-es/: europarl.dev.en  europarl.dev.en-es.ref  europarl.dev.en-es.src  europarl.dev.es  europarl.tst.en  europarl.tst.en-es.ref  europarl.tst.en-es.src  europarl.tst.es  newstest2010.tst.en  newstest2010.tst.en-es.ref  newstest2010.tst.en-es.src  newstest2010.tst.es
corpora/eu-es/: opendata.dev.es  opendata.dev.eu  opendata.dev.eu-es.ref  opendata.dev.eu-es.src  opendata.tst.es  opendata.tst.eu  opendata.tst.eu-es.ref  opendata.tst.eu-es.src
corpora/mk-en/: setimes.dev.en  setimes.dev.mk  setimes.dev.mk-en.ref  setimes.dev.mk-en.src  setimes.tst.en  setimes.tst.mk  setimes.tst.mk-en.ref  setimes.tst.mk-en.src
corpus/: guidelines.txt  run-evaluation.sh
corpus/test/: aconseguir.vblex  aconseguir.vblex.ca  aconseguir.vblex.en  acord.n_m  acord.n_m.ca  acord.n_m.en  acord.n_m.word  alt.adj  alt.adj.ca  alt.adj.en  alt.adj.word  alumne.n_mf  alumne.n_mf.ca  alumne.n_mf.en  alumne.n_mf.word  anunciar.vblex  anunciar.vblex.ca  anunciar.vblex.en  anunciar.vblex.word  aprovar.vblex  aprovar.vblex.ca  aprovar.vblex.en  apuntar.vblex  apuntar.vblex.ca  apuntar.vblex.en  apuntar.vblex.word  arrel.n_f  arrel.n_f.ca  arrel.n_f.en  arrel.n_f.word  arribada.n_f  arribada.n_f.ca  arribada.n_f.en  arribada.n_f.word  aspecte.n_m  aspecte.n_m.ca  aspecte.n_m.en  aspecte.n_m.word  assegurar.vblex  assegurar.vblex.ca  (+428 more)
dev/: giza.makefile  maxent.makefile  monomaxent.makefile
examples/: freq.txt  rule-format  rules.txt  rules.xml
irstlm_ranker/: compile.sh  main.cpp
irstlm_ranker/include/: irstlm_ranker.h  irstlm_ranker_frac.h  irstlm_ranker_max.h  irstlm_ranker_s.h  irstlm_ranker_total.h
irstlm_ranker/source/: irstlm_ranker.cpp  irstlm_ranker_frac.cpp  irstlm_ranker_max.cpp  irstlm_ranker_s.cpp  irstlm_ranker_total.cpp
locales/: Makefile.am  root.txt
python/: Makefile.am  apertium_lex_tools.i  lex_tools.i  setup.py.in
scripts/: Makefile  Makefile.am  apertium-lex-evaluate.py  biltrans-count-patterns-frac-maxent.py  biltrans-count-patterns-frac-maxent.py~  biltrans-count-patterns-frac.py  biltrans-count-patterns-frac.py~  biltrans-count-patterns-me.py  biltrans-count-patterns-ngrams.py  biltrans-count-patterns-ngrams.py~  biltrans-count-patterns.py  biltrans-count-patterns.py~  biltrans-extract-frac-freq.py  biltrans-extract-frac-freq.py~  biltrans-extract-freq.py  biltrans-extract-poormans-freq.py  biltrans-line-only-pos-ambig.py  biltrans-no-retained.py  biltrans-only-retained.py  biltrans-to-multitrans-line-recursive.py  biltrans-to-multitrans.py  biltrans-trim-uncovered.py  biltrans_count_common.py  bkp.biltrans-count-patterns-ngrams.py  bkp.extract-sentences.py  bkp.process_tagger_output.cc  common.py  common.py~  eval-corp-from-alig.py  expand-to-lrx.py  extract-alig-lrx.py  extract-alig-lrx.py~  extract-biltrans-cand.py  extract-biltrans-candidates.py  extract-default-ldx.py  extract-default-lrx.py  extract-freq-lexicon.py  extract-poormans-freq.py  extract-sentences.py  extract-sub-corpus.py  (+29 more)
scripts/unused/: process-tagger-output.py  process-tagger-output_2.py  process-tags.cc  split-sentences.py  unused.biltrans-extract-poormans-freq.py  unused.biltrans-no-retained.py
src/: Makefile.am  biltrans-without-queue.cpp  binary_header.h  irstlm_ranker.cc  irstlm_ranker.cpp  irstlm_ranker.h  ldx_proc.cc  lrx.dtd  lrx_comp.cc  lrx_compiler.cc  lrx_compiler.h  lrx_proc.cc  lrx_processor.cc  lrx_processor.h  multi_translator.cc  multi_translator.h  multitrans.cc  process_tagger_output.cc  tagger_output_processor.cc  tagger_output_processor.h  validate-lrx.sh  weight.h  yasmet.cc
testing/: bug1.expected  bug1.input  bug1.txt  bug1.xml  bug10.expected  bug10.input  bug10.txt  bug10.xml  bug11.input  bug12.expected  bug12.input  bug12.xml  bug2.expected  bug2.txt  bug2.xml  bug3.expected  bug3.input  bug3.xml  bug4.expected  bug4.txt  bug4.xml  bug5.expected  bug5.input  bug5.xml  bug6.expected  bug6.input  bug6.xml  bug7.txt  bug8.input  bug9.expected  bug9.input  bug9.xml  def-seq.expected  def-seq.input  def-seq.xml  def-set.expected  def-set.input  def-set.xml  empty.input  empty.xml  (+60 more)
