apertium_lex_toolsdir = $(prefix)/share/apertium-lex-tools
apertium_lex_tools_DATA = \
	extract-sentences.py \
	extract-freq-lexicon.py \
	ngram-count-patterns-maxent2.py \
	merge-ngrams-lambdas.py \
	lambdas-to-rules.py \
	common.py \
	ngrams-to-rules-me.py \
	biltrans-extract-frac-freq.py \
	extract-alig-lrx.py \
	biltrans-count-patterns-ngrams.py \
	ngram-pruning-frac.py \
	ngrams-to-rules.py \
	biltrans_count_common.py \
	ngram-count-patterns.py
